--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header{
     top:0px;
     width:100%;
     height:100px;
+    z-index: 1;
     
     display:flex; /* For at kunne distribuere boksene inden i.*/
     justify-content:space-around;
@@ -138,7 +139,7 @@ Logo og burger */
 
     /* Tekstlinks: */
     nav > a{
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-family:'Courier New', Courier, monospace;
         text-transform:uppercase;
         color:white;
         text-decoration:none;
@@ -179,6 +180,10 @@ Logo og burger */
 
     border-radius: 15px;
     padding: 20px;
+}
+
+.kort div:hover{
+    opacity: 0.9;
 }
 
 .kort div:first-child{
