--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ img{
     width: 100%;
 }
 
+
 /*HEADER*/
 /* HEADER: */
 header{
@@ -77,75 +78,6 @@ header{
 
     background-color:#252940;
     border-bottom:1px solid rgba(255,255,255,0.5); /* Den lille linje i bunden. */
-}
-
-/* Billeder skal fylde 100*% i deres container: 
-Logo og burger */
-#logo > img{
-    width:100%;
-}
-
-#navMobile > a > img{
-    width:100%; 
-}
-
-/* RESPONSIVE: */
-/* MOBIL: */
-@media screen and (max-width:1000px){
-    /*Distribuer elementer anderledes:*/
-    header{
-        justify-content:space-between ;
-        padding-left:10px;
-        padding-right:10px;
-    }
-    
-    /* Skjul laptopmenuen. */
-    #navLaptop {
-        display:none; 
-    }
-
-    /* Burgermenuen skal have en bredde */
-    #navMobile{ 
-        width:50px;
-    }
-
-    #logo{ /* Logoet skal være mindre på mobil. */
-        width:80px;
-    }    
-}
-
-/* LAPTOP: */
-@media screen and (min-width: 1000px){
-    /* HEADER: LOGO*/
-    #logo {/* Logoet. Er i en div fordi det spiller bedre med flexbox. */
-        width:200px;
-        margin:30px;
-        position:relative;
-        top:70px;
-    }
-
-    /* Skjul mobilmenuen.*/
-    #navMobile{
-        display:none;
-    }
-
-    /* Vis laptopmenuen og samtidig gør den til flex container. */
-    #navLaptop {
-        display:flex; 
-        justify-content:space-around;
-        width:70%;
-        gap:10px;
-    }
-
-    /* Tekstlinks: */
-    nav > a{
-        font-family:'Courier New', Courier, monospace;
-        text-transform:uppercase;
-        color:white;
-        text-decoration:none;
-        font-size:15pt;
-        font-weight:bold;
-    }
 }
 
 
@@ -214,41 +146,113 @@ Logo og burger */
     background-image: linear-gradient(rgb(0, 0, 0,0.2), rgb(0, 0, 0,0.1)), url(img/3b.jpg);
 }
 
-	/*lille skærm*/
-	@media screen and (max-width: 768px) {
-	    .kort{
-	        flex-direction: column;
-	        align-items: center;
-	        gap: 10px;
-	    }
-	    .kort div{
-	        width: 95%;
-	    }
-	    .kort > div:first-child{
-	        width: 95%;
-	    }
 
-
-
-        .agf_tv div{
-            width: 50%;
-        }
-}
 
 .agf_tv{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     width: 100%;
-    flex-wrap: wrap;
+    gap: 40px;
 
     color: black;
 }
 
 .agf_tv div{
-    width: 23%;
-    height: 400px;
-    margin: 10px;
+    width: 300px;
+    height: 300px;
+    transition: width 0.5s, height 0.5s;
 }
 
+.agf_tv div:hover{
+    width: 350px;
+    height: 350px;
+}
+
+
+
+
+
+/* RESPONSIVE: */
+/* MOBIL: */
+@media screen and (max-width:1000px){
+    /*Distribuer elementer anderledes:*/
+    header{
+        justify-content:space-between ;
+        padding-left:10px;
+        padding-right:10px;
+    }
+    
+    /* Skjul laptopmenuen. */
+    #navLaptop {
+        display:none; 
+    }
+
+    /* Burgermenuen skal have en bredde */
+    #navMobile{ 
+        width:50px;
+    }
+
+    #logo{ /* Logoet skal være mindre på mobil. */
+        width:80px;
+    }    
+}
+
+
+
+/* LAPTOP: */
+@media screen and (min-width: 1000px){
+    /* HEADER: LOGO*/
+    #logo {/* Logoet. Er i en div fordi det spiller bedre med flexbox. */
+        width:200px;
+        margin:30px;
+        position:relative;
+        top:70px;
+        
+    }
+
+    /* Skjul mobilmenuen.*/
+    #navMobile{
+        display:none;
+    }
+
+    /* Vis laptopmenuen og samtidig gør den til flex container. */
+    #navLaptop {
+        display:flex; 
+        justify-content:space-around;
+        width:70%;
+        gap:10px;
+    }
+
+    /* Tekstlinks: */
+    nav > a{
+        font-family:'Courier New', Courier, monospace;
+        text-transform:uppercase;
+        color:white;
+        text-decoration:none;
+        font-size:15pt;
+        font-weight:bold;
+    }
+}
+
+
+/*lille skærm*/
+@media screen and (max-width: 768px) {
+    .kort{
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .kort div{
+        width: 95%;
+    }
+    .kort > div:first-child{
+        width: 95%;
+    }
+
+    .agf_tv{
+        flex-direction:column;
+        align-items:center;
+        }
+    }
 
